190402-modify .mmap filess 80%

--- a/技术方向：知识图谱.md
+++ b/技术方向：知识图谱.md
@@ -193,6 +193,10 @@ c)“姚明是现任中国篮协主席”
 
 ### 4、知识存储
 
+知识图谱是基于图的数据结构，它的存储方式主要有两种形式：RDF存储格式和图数据库(Graph Database)。
+
+![基于图的数据库排名](C:\Users\salmond\AppData\Roaming\Typora\typora-user-images\1553585371710.png)
+
 图谱的数据存储既需要完成基本的数据存储，同时也要能支持上层的知识推理、知识快速查询、图实时计算等应用，因此需要存储以下信息：三元组（由开始节点、关系、结束节点三个元素组成）知识的存储、事件信息的存储、时态信息的存储、使用知识图谱组织的数据的存储。
 
 其关键技术和难点就在于：
@@ -204,7 +208,7 @@ c)“姚明是现任中国篮协主席”
 
 ### 5、知识推理
 
-知识推理则是在已有的知识库基础上进一步挖掘隐含的知识，从而丰富、扩展知识库。在推理的过程中，往往需要关联规则的支持。由于实体、实体属性以及关系的多样性，人们很难穷举所有的推理规则，一些较为复杂的推理规则往往是手动总结的。
+知识推理则是在已有的知识库基础上进一步挖掘隐含的知识，从而丰富、扩展知识库。在推理的过程中，往往需要关联规则的支持。由于实体、实体属性以及关系的多样性，很难穷举所有的推理规则，一些较为复杂的推理规则往往是手动总结的。
 
 对于推理规则的挖掘，主要还是依赖于实体以及关系间的丰富同现情况。知识推理的对象可以是实体、实体的属性、实体间的关系、本体库中概念的层次结构等。**知识推理方法主要可分为基于逻辑的推理与基于图的推理两种类别**。
 
@@ -241,6 +245,16 @@ c)“姚明是现任中国篮协主席”
 
 - **D3.js：**全称Data-Driven Documents，是一个用动态图形显示数据的JavaScript库，一个数据可视化工具，它提供了各种简单易用的函数，大大方便了数据可视化的工作。
 - **ECharts：**是一款由百度前端技术部开发的，同样基于Javascript的数据可视化图标库。它提供大量常用的数据可视化图表，底层基于ZRender（一个全新的轻量级canvas类库），创建了坐标系、图例、提示、工具箱等基础组件，并在此上构建出折线图（区域图）、柱状图（条状图）、散点图（气泡图）、饼图（环形图）、K线图、地图、力导向布局图以及和弦图，同时支持任意维度的堆积和多图表混合展现。
+
+**（11）异常分析**
+
+大多数基于图的异常分析的计算量比较大，可以选择做`离线计算`。异常分析分为两大类： 静态分析和动态分析。
+
+- 静态分析指的是，给定一个图形结构和某个时间点，从中去发现一些异常点。
+
+- 动态分析指的是分析其结构随时间变化的趋势。涉及到时序分析技术和图相似性计算技术。
+
+
 
 
 
