--- a/机器学习/数据集.md
+++ b/机器学习/数据集.md
@@ -8,6 +8,12 @@ UCI数据集网址： <http://archive.ics.uci.edu/ml/>
 
 scikit-learn网址：[http://scikit-learn.org/stable/datasets/index.html#datasets](http://scikit-learn.org/stable/datasets/index.html)
 
+ImageNet计算机视觉数据集：
+
+
+
+
+
 ![数据集对比](./images/数据集对比.png)
 
 ### 数据集的划分
